# signal-monitoring-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.local-safety.md  README.local-trial.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
config/: config.example.yaml
config/fragments/: llm.provider.yaml  sources.ai_infra.yaml  tts.provider.yaml
docs/: social-post.zh.md
monitor_agent/: __init__.py  candidate_retrieval.py  event_store.py  inbox_engine.py  llm_dedup_engine.py  local_runner.py  main.py  preflight.py  priority_engine.py  storage_engine.py  time_engine.py  trend_engine.py  user_input_resolver.py
monitor_agent/api/: brief_panel.py  config_panel.py  server.py  tool_schema.py
monitor_agent/briefing/: __init__.py  generator.py  localizer.py
scripts/: open_source_audit.sh  run_local.sh  strategy_flow.sh
tests/: __init__.py  test_api_security.py  test_briefing_readability.py  test_config_imports.py  test_config_panel.py  test_dingtalk_inbound.py  test_incremental_ingestion.py  test_ingest_auto_run.py  test_ingestion_manager_routing.py  test_local_trial_ops.py  test_logging_security.py  test_notification_manager.py  test_p0_stabilization.py  test_playwright_runtime.py  test_rss_second_hop.py  test_signal_extractor_prompt.py  test_source_advisories.py  test_source_strategy_engine.py  test_strategy_generate_persistence.py  test_strategy_normalization.py  test_telegram_inbound.py  test_telegram_renderer.py  test_telegram_rewriter.py  test_trend_engine.py  test_tts_manager.py  test_user_input_resolution.py  test_user_input_security.py
(+44 files in other folders)
